# marcusdesai.github.io

./: .gitignore  Makefile  README.md  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  run.sh  tex-to-img.sh
.github/workflows/: publish.yml
conf/: local.py  publish.py
content/: test-post.md  unsimulated.md
content/2023/Aug/: emoji-grammar.md  follow-automata.md  hesitant-control.md  implementing-pos.md  pos-automata.md  types-py312.md  unsimulated.md
content/pages/: about.md
latex/2023/Aug/follow-automata/: sd-fol.tex  sd-pos-vs-fol.tex
latex/2023/Aug/pos-automata/: sd-ace.tex  sd-alt-ex.tex  sd-example.tex  sd-null-ex.tex  sd-pos-ex.tex
themes/simple/static/css/: highlight.css  style.scss
themes/simple/templates/: article.html  index.html  page.html
themes/test/static/css/: style.css  style.scss
themes/test/templates/: about.html  article.html  index.html  page.html
tooling/highlight/: rust.py
tooling/wysiwyg/: __main__.py  driver.py  handler.py
