[project]
name = "blog"
version = "0.1.0"
authors = [{ name = "Marcus Desai" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "cssmin == 0.2.0",
    "libsass == 0.22.0",
    "pelican[Markdown] == 4.8.0",
    "pelican-sitemap == 1.1.0",
    "pelican-webassets == 2.0.0",
    "Pygments == 2.15.1",
    "selenium == 4.10.0",
    "watchdog == 3.0.0",
]

[project.optional-dependencies]
dev = [
    "black == 23.7.0",
    "pytest == 7.4.0",
    "pytest-cov == 4.1.0",
    "ruff == 0.0.280",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tooling"]

[tool.pytest.ini_options]
#addopts = "--cov=operast --cov-branch --cov-report=term --cov-report=html"
testpaths = ["tests"]
filterwarnings = [
    'ignore:NotImplemented should not be used in a boolean context:DeprecationWarning'
]

[tool.coverage.report]
exclude_lines = [
    # Standard pragma to ignore lines for coverage
    "pragma: no cover",
    # Don't complain if tests don't hit defensive exception code
    "raise NotImplementedError",
    # Don't complain about abstract methods, they aren't run
    "@(abc\\.)?abstractmethod",
    # Don't complain about __repr__, they're debug only
    "def __repr__",
]

[tool.ruff]
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

select = [
    "A", "ANN", "B", "C4", "E", "EM", "F", "I", "INP",
    "ISC", "N", "PGH", "PIE", "RUF", "UP", "W"
]

ignore = [
    # It's fine to shadow builtin names, as long as the shadowing is namespaced
    "A003",
    # Ignore to avoid annotating all `self` & `cls` args for methods
    "ANN101", "ANN102",
    # Ignore use of unicode math symbols
    "RUF003",
]

# Same as Black.
line-length = 88

[tool.ruff.per-file-ignores]
# Allow star imports in __init__ only as we use this functionality to simplify
# fine tuning of package imports for library consumers. Unfortunately, we also
# have to disable checking of unused imports to make this work.
"__init__.py" = ["F401", "F403", "F405"]

"test_*.py" = [
    # Test functions do not need full annotation
    "ANN",
    # Test lines can be too long
    "E501",
    # Allow star imports in tests, for convenience.
    "F401", "F403", "F405",
    # Ignore implicit namspaces package error as adding __init__.py files to
    # test dirs causes issues with pytest.
    "INP",
    # Ignore pep8 naming for test functions.
    "N801", "N802"
]

# setup.py does not need to be in a dir with an __init__.py file due to the way
# this package is organised, so ignore the implicit namespace package error.
"setup.py" = ["INP"]

# conf dir does not need an __init__.py
"conf/*" = ["INP001"]

[tool.ruff.isort]
# Use the "extra-standard-library" config to make EVERYTHING sort alphabetically
# instead of the asinine separation of std, 3rd party, etc...

# What should go in this list is the exact name of a package as it is imported,
# not verbatim as it is installed with pip. For example, the "typing-extensions"
# package is imported as "typing_extensions", and this is what we put into the
# list below.
extra-standard-library = [
    # third-party
    "pelican",
    "pygments",
    "selenium",
    "watchdog",
    # first-party
    "tooling",
]
